Fix overflow-y problem with map-slides

--- a/assets/styles/map-slide.scss
+++ b/assets/styles/map-slide.scss
@@ -6,7 +6,7 @@
   left: 50%;
   margin-right: 3.2rem;
   max-height: 40%;
-  overflow-y: scroll;
+  overflow-y: auto;
   padding: .7rem;
   position: absolute;
   transform: translateX(-50%);
